# lexegen

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-tbls.sh  build_tbls.sh
include/util/: format.h  utf8.h
include/uxs/: config.h
src/: dfa_builder.cpp  dfa_builder.h  dfabld.cpp  dfabld.h  lex.lex  lex_analyzer.inl  lex_defs.h  lexer.cpp  lexer.h  logger.cpp  logger.h  main.cpp  node.cpp  node.h  parser.cpp  parser.h  parser_analyzer.inl  parser_defs.h  regex.gr  reparser.cpp  reparser.h  valset.cpp  valset.h
src/util/: format.cpp
